--- a/framer-motion-demo/src/App.css
+++ b/framer-motion-demo/src/App.css
@@ -2,6 +2,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-image: radial-gradient( circle 382px at 50% 50.2%,  rgba(73,76,212,1) 0.1%, rgba(3,1,50,1) 100.2% );;
+  /* For simple / intermediate animation uncomment below */
+  /* height: 100vh; */
+  background-image: radial-gradient(
+    circle 382px at 50% 50.2%,
+    rgba(73, 76, 212, 1) 0.1%,
+    rgba(3, 1, 50, 1) 100.2%
+  );
+  scroll-behavior: smooth;
+}
+
+.reveal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10rem;
+  padding: 10rem;
 }
